--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "compressorjs": "^1.1.1",
     "dayjs": "^1.10.7",
     "firebase": "^9.6.1",
     "md5": "^2.3.0",
